fix bg colour on mobile navbar

--- a/app/assets/scss/home.scss
+++ b/app/assets/scss/home.scss
@@ -45,6 +45,9 @@ header {
   color: #fff; 
   .columns { font-size: 1.5rem; }
   a { color: #fff; }
+  .navbar-menu { 
+    background: rgba(#000, 0.5);
+  }
 }
 
 h1,h2 { font-family: 'Amatic SC'; }
